fix scrollbar

--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -26,7 +26,7 @@
   background-color: #000000;
 } */
 
-ion-content {
+/* ion-content {
   --offset-bottom: auto !important;
   --overflow: hidden;
   overflow: auto;
@@ -34,4 +34,24 @@ ion-content {
 
 ion-content ::-webkit-scrollbar {
     display: none;
+} */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
